Fixed grid size that forces horizontal scroll on larger mobile devices in mobile

--- a/styles.scss
+++ b/styles.scss
@@ -149,7 +149,7 @@
   margin-bottom: 20%;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 1000px) {
   .grid-projects {
     grid-template-areas:
       "title"
